# detector

./: CMakeLists.txt  config.yaml  main.cc  main.cpp  session_config.py
bench/: bench.cpp
include/: detector.h  detector_config.h  input.h  md_config.h  output.h  tf_frame.h
old_project/: CMakeLists.txt  Readme.md  main.cpp
old_project/bench/: CMakeLists.txt  bench.cpp
old_project/include/: detector.h  input.h  md_config.h  tf_frame.h
old_project/poordetector/: .gitignore  main.cpp
old_project/poordetector/bench/: CMakeLists.txt
old_project/poordetector/include/: output.h  poordetector.h
old_project/poordetector/src/: input.cpp  poordetector.cpp
old_project/src/: detector.cpp  input.cpp  output.cpp
poordetector/: CMakeLists.txt
poordetector/bench/: bench.cpp
poordetector/include/: input.h  md_config.h  tf_frame.h
poordetector/src/: poordetector.cpp  tf_frame.cpp
src/: detector.cc  detector.cpp  detector_config.cc  input.cc  input.cpp  md_config.cpp  output.cc  output.cpp  tf_frame.cc  tf_frame.cpp
